# book_reading

./: .gitignore
week1-freivald/freivalds_algorithm/: Cargo.toml  README.md
week1-freivald/freivalds_algorithm/src/: lib.rs
week1-freivald/freivalds_algorithm/tests/: test.rs
week2-extension/multi_extension/: Cargo.toml
week2-extension/multi_extension/src/: lib.rs
week3-sumcheck/: Cargo.toml  README.md
week3-sumcheck/src/: lib.rs
week3-sumcheck/src/sumcheck/: mod.rs  polynomial_rep.rs
week3-sumcheck/src/sumcheck/protocol/: mod.rs  prover.rs  verifier.rs
week4-gkr/: README.md
