[package]
name = "sumcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-std = "0.3.0"
ark-serialize = { version = "^0.3.0", default-features = false, features = ["derive"] }
blake2 = { version = "0.9", default-features = false }