[package]
name = "freivalds_algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-algebra-intro = "0.3.0"
ark-ff = "0.3.0"
ark-std = "0.3.0"
ark-bls12-381 = "0.3.0"
more-asserts = "0.2"
num-bigint = "0.4"
ndarray = "0.15"
lazy_static = "1.4"
rstest = "0.12.0"